--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ https://templatemo.com/tm-526-vanilla
                         <p>Aliquam eu ultrices risus, sed condimentum diam. Duis risus nulla, elementum vitae nisi a, ornare maximus nisl. Morbi et vehicula est. Cras at vulputate justo. Cras eu nulla metus. Ut et pretium velit. Pellentesque at neque tristique dui tempor venenatis.</p>
                       </div>
                       <div id="tab3">
-                        <img src="img/3rd-tab.jpg" alt="">
+                        <img src="img/1st-tab.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia ligula est, at venenatis ex iaculis quis. Morbi sollicitudin nulla eget odio pellentesque, sed cursus diam iaculis.</p>
                       </div>
                       <div id="tab4">
