--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-526-vanilla
                             <li>-  Lorem Ipsum is simply dummy text</li>
                         </ul>
                         <div class="primary-button">
-                            <a href="#portfolio">Learn More About Us</a>
+                            <a href="list.pdf">Items Supplied</a>
                         </div>
                     </div>
                 </div>
