--- a/index.html
+++ b/index.html
@@ -195,20 +195,20 @@ https://templatemo.com/tm-526-vanilla
                     <div class="wrapper">
                     <section id="first-tab-group" class="tabgroup">
                       <div id="tab1">
-                        <img src="img/1st-tab.jpg" alt="">
-                        <p>Please do not re-distribute our template ZIP file on your template collection sites. You can make a screenshot and a link back to our website. This template can be used for personal or commercial purposes by end-users.</p>
+                        <img src="img/2nd-tab.jpg" alt="">
+                        <p>Doxa Engineering Works.</p>
                       </div>
                       <div id="tab2">
                         <img src="img/2nd-tab.jpg" alt="">
-                        <p>Aliquam eu ultrices risus, sed condimentum diam. Duis risus nulla, elementum vitae nisi a, ornare maximus nisl. Morbi et vehicula est. Cras at vulputate justo. Cras eu nulla metus. Ut et pretium velit. Pellentesque at neque tristique dui tempor venenatis.</p>
+                        <p>Doxa Engineering Works.</p>
                       </div>
                       <div id="tab3">
-                        <img src="img/1st-tab.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia ligula est, at venenatis ex iaculis quis. Morbi sollicitudin nulla eget odio pellentesque, sed cursus diam iaculis.</p>
+                        <img src="img/2nd-tab.jpg" alt="">
+                        <p>Doxa Engineering Works.</p>
                       </div>
                       <div id="tab4">
                         <img src="img/4th-tab.jpg" alt="">
-                        <p>Duis risus nulla, elementum vitae nisi a, ornare maximus nisl. Morbi et vehicula est. Cras at vulputate justo. Cras eu nulla metus. Ut et pretium velit. Pellentesque at neque tristique.</p>
+                        <p>Doxa Engineering Works.</p>
                       </div>
                     </section>
                     <ul class="tabs clearfix" data-tabgroup="first-tab-group">
@@ -266,7 +266,7 @@ https://templatemo.com/tm-526-vanilla
                            4. Copy only URL and paste it within the src="" field below
                     -->
 
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="390" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.9689181506815!2d78.29846031488823!3d17.508997103894835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92a9e98df4c3%3A0xe28b43a04eba0c82!2sMandal%20Office!5e0!3m2!1sen!2sin!4v1602436081358!5m2!1sen!2sin" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
