--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$84.50</span>
+                                    <h4>Studs</h4>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -176,8 +176,8 @@ https://templatemo.com/tm-526-vanilla
                             <div class="testimonials-item">
                                 <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Awesome Notes Book</h4>
-                                    <span>$96.75</span>
+                                    <h4>Studs</h4>
+                    
                                 </div>
                             </div>
                         </div>
