--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ https://templatemo.com/tm-526-vanilla
                            4. Copy only URL and paste it within the src="" field below
                     -->
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.9689181506815!2d78.29846031488823!3d17.508997103894835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92a9e98df4c3%3A0xe28b43a04eba0c82!2sMandal%20Office!5e0!3m2!1sen!2sin!4v1602436081358!5m2!1sen!2sin" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3804.986075652175!2d78.303014660039!3d17.508178120005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb933ad74120c3%3A0x2bcc0ba16d7e9ae5!2sN%20Care%20Hospitals!5e0!3m2!1sen!2sin!4v1602436480222!5m2!1sen!2sin" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
