--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@ https://templatemo.com/tm-526-vanilla
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                     </ul>
-                    <p>Copyright &copy; 2019 Company Name 
+                    <p>Copyright &copy; 2013 Doxa Engineering Works 
             
-            		- Design: <a rel="nofollow noopener" href="https://templatemo.com"><em>TemplateMo</em></a></p>
+            		- Design: <a rel="nofollow noopener" href="http://bit.ly/doxaeng"><em>TemplateMo</em></a></p>
                 </div>
             </div>
         </div>
