--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ https://templatemo.com/tm-526-vanilla
                     </ul>
                     <p>Copyright &copy; 2013 Doxa Engineering Works 
             
-            		- Design: <a rel="nofollow noopener" href="http://bit.ly/doxaeng"><em>TemplateMo</em></a></p>
+            		- Design: <a rel="nofollow noopener" href="http://bit.ly/doxaeng"><em>DoxaEng</em></a></p>
                 </div>
             </div>
         </div>
