--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@
                 </nav>
             </div><!-- menu end -->
             <!-- credits launcher start -->
-            <div class="credits fadeIn-element">
-                <a class="toggle-credits-content"><span>Photo Credit</span></a>
-            </div><!-- credits launcher end -->
+           <!-- credits launcher end -->
             <!-- instagram feed launcher start -->
-            <div class="instagram-feed fadeIn-element">
-                <a class="toggle-instagram-feed-content"><span>Instagram Feed</span></a>
-            </div><!-- instagram feed launcher end -->
+            <!-- instagram feed launcher end -->
         </div><!-- border bottom menu end -->
         <!-- border bottom start -->
         <div class="border-bottom bottom-position">
