--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
           <div class="col-md-12">
             <h1>About Us</h1>
             <!-- <hr class="solid" style="border-color:teal;background-color:teal"/> -->
-            <span>Alternate Dimension</span>
+            <span>Doxa Engineering Works</span>
             <!-- <hr class="solid" style="border-color:teal;background-color:teal"/> -->
           </div>
         </div>
@@ -93,7 +93,7 @@
                   <div class="right-content">
                     <h2 data-animation="zoomReverseIn" data-animation-delay="200ms"><b>Alternate Dimension</b></h2>
                     <hr class="solid" style="border-color:teal;background-color:teal"/>
-                    <p data-animation="zoomIn" data-animation-delay="200ms">Alternate Dimension is an Indian Engineering and Robotics design company founded in 2020. We started with a vision of building diversified Robotics and automation industry which focus on multi-disciplinary aspects of research and development.
+                    <p data-animation="zoomIn" data-animation-delay="200ms">Doxa is an Indian Engineering and Robotics design company founded in 2020. We started with a vision of building diversified Robotics and automation industry which focus on multi-disciplinary aspects of research and development.
                     <br><br>Our mission is to provide dynamic robotic solutions to solve crucial problems in the fields of manufacturing, supply-chain and other industrial problems. We also focus on providing a world class Neural Prosthetics/Bionics (Robotic Artificial limbs) for affordable price by initiating Project “Enable”. Our wide focus on cutting edge Robotic technologies makes us efficient enough to train young minds, individuals, enthusiast etc. Now we are taking next step in making advanced Robots for domestic and industrial purposes.
                   </p>
                   </div>
@@ -118,9 +118,9 @@
             <div class="team-item">
               <!-- <img src="assets/images/team_01.jpg" alt=""> -->
               <div class="down-content">
-                <h4>SRI HARSHA GADIYARAM</h4>
+                <h4>Kumar</h4>
                 <span>Founder, CEO</span>
-                <p>Sri harsha is an inventor, designer and entrepreneur. He is expert in
+                <p>Kumar is an inventor, designer and entrepreneur. He is expert in
                   Robotics and Automation.</p>
               </div>
             </div>
@@ -129,9 +129,9 @@
             <div class="team-item">
               <!-- <img src="assets/images/team_02.jpg" alt=""> -->
               <div class="down-content">
-                <h4>SRIJA</h4>
+                <h4>Samuel</h4>
                 <span>CO- Founder, COO</span>
-                <p>Srija is an Entrepreneur. Her Expertise lies in Operations and
+                <p>Samuel is an Entrepreneur. Her Expertise lies in Operations and
                   strategic management.</p>
               </div>
             </div>
@@ -145,9 +145,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 footer-item">
-              <img class="logo_dark" src="assets/images/logo.png" alt="logo" width="100" height="100"
-                style="margin-left:50px" />
-              <h4 class="mt-3">Alternate Dimension</h4>
+              
+              <h4 class="mt-3">Doxa Engineering Works</h4>
               <p>
                 CONTACT
               </p>
@@ -174,8 +173,6 @@
               <ul class="menu-list">
                 <li><a href="contact.html">Join us</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="3Dprinting-services.html">3d printing</a></li>
-                <li><a href="silicon-molding-services.html">Silicone Molding</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -238,7 +235,7 @@
               <p>
                 Copyright &copy;               
                 <script>document.write(new Date().getFullYear())</script>
-                All Rights Reserved by <u>Alternate Dimension.</u>
+                All Rights Reserved by <u>Doxa.</u>
               </p>
             </div>
           </div>
