--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <i class="fa fa-phone" data-animation="zoomIn" data-animation-delay="100ms"></i>
             <h4>Phone</h4>
             <p>give us a call today!</p>
-            <a href="#">+91 8688005334</a>
+            <a href="#">9640492906, 9032777651</a>
           </div>
         </div>
         <div class="col-md-4">
@@ -101,14 +101,14 @@
             <p>Drop a Mail.</p>
             <a href="mailto:info@alternatedimension.in" target="_blank"
               style="font-size: 12px;margin-left:-15px;margin-right:-15px"
-              class="text-center">info@alternatedimension.in</a>
+              class="text-center">ambati.samuel@gmail.com</a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="contact-item" style="padding-bottom: 50px;">
             <i class="fa fa-map-marker" data-animation="zoomIn" data-animation-delay="100ms"></i>
             <h4>Location</h4>
-            <p style="margin-bottom: 0px;">2nd floor, PlotNo.01, APHB colony, MIG-1, Balanagar, Hyderabad - 500037</p>
+            <p style="margin-bottom: 0px;"> Hyderabad </p>
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
         <div class="col-md-4 footer-item">
           <img class="logo_dark" src="assets/images/logo.png" alt="logo" width="100" height="100"
             style="margin-left:50px" />
-          <h4 class="mt-3">Alternate Dimension</h4>
+          <h4 class="mt-3">Doxa</h4>
           <p>
             CONTACT
           </p>
@@ -218,8 +218,6 @@
           <ul class="menu-list">
             <li><a href="contact.html">Join us</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="3Dprinting-services.html">3d printing</a></li>
-            <li><a href="silicon-molding-services.html">Silicone Molding</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -290,7 +288,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script>
-            All Rights Reserved by <u>Alternate Dimension.</u>
+            All Rights Reserved by <u>Doxa.</u>
           </p>
         </div>
       </div>
