--- a/index.html
+++ b/index.html
@@ -359,9 +359,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 footer-item">
-            <img class="logo_dark" src="assets/images/logo.png" alt="logo" width="100" height="100"
-              style="margin-left:50px" />
-            <h4 class="mt-3">Alternate Dimension</h4>
+            
+            <h4 class="mt-3">Doxa</h4>
             <p>
               CONTACT
             </p>
@@ -388,8 +387,6 @@
             <ul class="menu-list">
               <li><a href="contact.html">Join us</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="3Dprinting-services.html">3d printing</a></li>
-              <li><a href="silicon-molding-services.html">Silicone Molding</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
@@ -455,7 +452,7 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All Rights Reserved by <u>Alternate Dimension.</u>
+              All Rights Reserved by <u>Doxa</u>
             </p>
           </div>
         </div>
