--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               <div class="row">
                 <div class="col-md-12 align-self-center">
                   <div class="right-content">
-                    <h2 data-animation="zoomReverseIn" data-animation-delay="200ms"><b>Alternate Dimension</b></h2>
+                    <h2 data-animation="zoomReverseIn" data-animation-delay="200ms"><b>Doxa Engineering Works</b></h2>
                     <hr class="solid" style="border-color:teal;background-color:teal"/>
                     <p data-animation="zoomIn" data-animation-delay="200ms">Doxa is an Indian Engineering and Robotics design company founded in 2020. We started with a vision of building diversified Robotics and automation industry which focus on multi-disciplinary aspects of research and development.
                     <br><br>Our mission is to provide dynamic robotic solutions to solve crucial problems in the fields of manufacturing, supply-chain and other industrial problems. We also focus on providing a world class Neural Prosthetics/Bionics (Robotic Artificial limbs) for affordable price by initiating Project “Enable”. Our wide focus on cutting edge Robotic technologies makes us efficient enough to train young minds, individuals, enthusiast etc. Now we are taking next step in making advanced Robots for domestic and industrial purposes.
