--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Alternate Dimension" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
     rel="stylesheet" />
-  <title>Alternate Dimension</title>
+  <title>Doxa</title>
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
